V3 bugs (#156)
* Fixes #150: dropped the default configured thread counts and added config option.
* Fixes #141: updated the commons-io - seems to be ok
* Fixes #151: query matcher was extracted - others will follow. This commit has prototype stuff for new predicate interface matchers as well.
* request matchers refactored to new format - need to clean up some duplication and disabled tests
* matcher and doc cleanup
* implemented predicate matcher
* adding more tests
* Added global request requirements feature.
* Updated docs
* Fixes #147: verified that request/response overrides global - though this did uncover some weakness in the chain framework. Reworking it soon.
* Reworked the encoder/decoder chains to be more simple.